# junk

./: .gitignore  Doxyfile.in  Info.plist.erb  Makefile.am  addrinfo.cpp  addrinfo.hpp  addrinfo_test.cpp  audio_stream.hpp  audio_stream_test.cpp  autobuild.rb  autogen.sh  benchmark.hpp  benchmark_sample.cpp  bm_vector_length.cpp  boost_program_options_sample.cpp  build.make  build.ninja  build.ninja.in  build.ninja.in.yaml  build.ninja.yaml.erb.in  c1.cpp  c1.rb  callback.hpp  channel.cpp  channel.hpp  channel_test.cpp  circle_2d.hpp  circle_2d_test.cpp  circular_buffer.hpp  circular_buffer_test.cpp  configure.ac  configure.in  controller.cpp  controller.hpp  csv_test.cpp  drop7.rb  filter.cpp  filter.hpp  filter_test.cpp  font.cpp  (+177 more)
data/: sample.mid  sound_data_sample.s
junk_msvc11/: junk_msvc11.sln
junk_msvc11/junk/: ReadMe.txt  junk.vcxproj
junk_msvc11/junk_test/: ReadMe.txt  junk_test.cpp  junk_test.vcxproj  stdafx.cpp
xcode/junk.xcworkspace/: contents.xcworkspacedata
xcode/logger/logger.xcodeproj/: project.pbxproj
