#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(junk, 0.0.0, don@na.rim.or.jp)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([test_main.cpp])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_AWK
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_CPP
AC_PROG_MKDIR_P

#AC_ARG_ENABLE(gcov, [  --enable-gcov  turn on gcov [default no]],,enable_gcov=no)
#AC_MSG_CHECKING(whether to enable gcov)
#if test "x$enable_gcov" = xyes; then
#  AC_MSG_RESULT(yes)
#  CC="$CC -coverage"
#  CXX="$CXX -coverage"
#else
#  AC_MSG_RESULT(no)
#fi

AX_WITH_RUBY

# Checks for libraries.
AM_PATH_SDL(1.3)
AM_PATH_CPPUNIT
AX_BOOST_BASE
AM_PATH_SDL

# Checks for header files.
AC_CHECK_HEADERS([stdint.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_INT32_T
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_MEMCMP
AC_HEADER_STDC

AC_CONFIG_FILES([Makefile net_test.sh peg_test.sh], [chmod +x net_test.sh peg_test.sh])
AC_OUTPUT
